<resources>
    <string name="app_name">CheckInActivity</string>
    <string name="check_in_title_hint">Enter a title for your activity.</string>
    <string name="activity_place_hint">Enter your location.</string>
    <string name="details_hint">Enter the details of your activity</string>
    <string name="check_in_title_label">Title</string>
    <string name="check_in_details_label">Details</string>
    <string name="date_picker_title">Date of activity:</string>
    <string name="new_check_in">New Activity</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d activities</string>
    <string name="check_in_report_text">Share</string>
    <string name="check_in_report">%1$s!
    The activity was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="check_in_report_contact">there are contacts you can share this activity with</string>
    <string name="check_in_report_unfinished">The activity has not yet finished</string>
    <string name="check_in_report_no_contact">there is no one to share this activity with.</string>
    <string name="check_in_report_subject">CheckInActivity Activity Report</string>
    <string name="send_report">Send activity report via</string>
    <string name="map">Map</string>
    <string name="google_maps_key">AIzaSyAbvkqPENEKB9Lh0kKkpjVEym8Ent2L-pM</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_web_page">WebPage</string>
</resources>
