<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/check_in_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>

            <ImageButton
                android:id="@+id/check_in_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>
            
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_in_title_label"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/check_in_title_hint"/>

            <EditText
                android:id="@+id/activity_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_place_hint"/>

        </LinearLayout>
        
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_in_details_label"/>

    <EditText
        android:id="@+id/activity_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details_hint"/>

    <Button
        android:id="@+id/check_in_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_in_report_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/latlong_view"
                android:layout_width="180dp"
                android:layout_height="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/activity_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>